<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hcy-kf-t7M">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="mhW-Wn-4Ou">
                                <rect key="frame" x="0.0" y="44" width="375" height="1056"/>
                                <subviews>
...
                                                    <constraint firstAttribute="width" constant="34" id="fwE-fe-YnB"/>
                                                </constraints>
                                                <state key="normal" image="dropDown"/>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Staging Campaign: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vez-W0-8mV">
...
                                                                <textField opaque="NO" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Privacy Manager ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fDH-dh-nXN" userLabel="GDPRPrivacyManagerID">
                                                                    <rect key="frame" x="120" y="10" width="210" height="34"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="pmTextFieldOutlet" label="pmTextFieldOutlet"/>
                                                                    <constraints>
                                                                        <constraint firstAttribute="height" constant="34" id="lFJ-Jd-47W"/>
...
                                                                <textField opaque="NO" tag="13" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Targeting Key" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rW2-kJ-bfl" userLabel="KeyTextfiled">
                                                                    <rect key="frame" x="62" y="153" width="268" height="34"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="targetingKeyTextFieldOutlet" label="targetingKeyTextFieldOutlet"/>
                                                                    <constraints>
                                                                        <constraint firstAttribute="height" constant="34" id="h1c-kd-h0C"/>
...
                                                                <textField opaque="NO" tag="14" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Targeting Value" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vsl-Yo-2Be" userLabel="TargetingValueTextField">
                                                                    <rect key="frame" x="62" y="202" width="268" height="34"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="targetingValueTextFieldOutlet" label="targetingValueTextFieldOutlet"/>
                                                                    <constraints>
                                                                        <constraint firstAttribute="height" constant="34" id="reQ-Mq-89e"/>
...
                                                                    <fontDescription key="fontDescription" name="SFProText-Heavy" family="SF Pro Text" pointSize="15"/>
                                                                    <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                    <state key="normal" title="Targeting Param" image="AddIcon">
                                                                        <color key="titleColor" red="0.2470588235" green="0.79607843140000001" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
                                                                    </state>
...
                                                                    <fontDescription key="fontDescription" name="SFProText-Heavy" family="SF Pro Text" pointSize="15"/>
                                                                    <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                    <state key="normal" title="Save Campaign" image="Done">
                                                                        <color key="titleColor" red="0.2470588235" green="0.79607843140000001" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
                                                                    </state>
...
                    </view>
                    <navigationItem key="navigationItem" title="Property Debug Info" id="1Mn-Sb-edJ">
                        <barButtonItem key="rightBarButtonItem" title="Menu" image="Menu" id="phc-lZ-VCD">
                            <connections>
                                <action selector="showPMAction:" destination="Lyi-Xh-6dq" id="koK-Av-UIy"/>
...
