...
    },
    {
    "id": "NavCategoriesButton",
    "type": "NativeButton",
    "name": "Navigate To Categories Btn",
    "settings": {
    "text": "Manage Preferences",
    "style": {
    "font": {
    "fontSize": 14,
    "fontWeight": "400",
    "fontFamily": "arial, helvetica, sans-serif"
    },
...
    "children": [
    {
    "id": "BackButton",
    "type": "NativeButton",
    "name": "Back Button",
    "settings": {
    "text": "Back",
    "style": {
    "backgroundColor": "#ffffff",
    "font": {
    "fontSize": 16,
    "fontWeight": "400",
    "color": "#000000",
...
    },
    {
    "id": "SaveButton",
    "type": "NativeButton",
    "name": "Save Button",
    "settings": {
    "text": "Save & Exit",
    "style": {
    "font": {
    "fontSize": 14,
    "fontWeight": "400",
    "fontFamily": "arial, helvetica, sans-serif"
    },
...
