...
        }
        let resetAction = UIContextualAction(style: .destructive, title: nil) { [weak self] (_, _, handler) in
            self?.hideIndicator()
            let alertController = UIAlertController(title: "", message: "", preferredStyle: UIAlertController.Style.alert)
            alertController.setValue(SPLiteral.attributedString(), forKey: "attributedTitle")
            alertController.view.accessibilityIdentifier = "alertView"
            let noAction = UIAlertAction(title: "Cancel", style: UIAlertAction.Style.destructive, handler: {(_: UIAlertAction!) in
                self?.propertyTableView.reloadData()
            })
            let yesAction = UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: {(_: UIAlertAction!) in
                self?.showIndicator()
                self?.propertyListViewModel.clearUserDefaultsData()
                self?.loadConsentDetailsViewController(atIndex: indexPath.row, isReset: true)
                self?.hideIndicator()
            })
            alertController.addAction(noAction)
...
