...

    @IBOutlet var sideMenuTableView: UITableView!
    var delegate: SideMenuViewControllerDelegate?
    var defaultHighlightedCell: Int = 0

    var menu: [SideMenuModel] = [
        SideMenuModel(title: "Load GDPR PM"),
        SideMenuModel(title: "Load CCPA PM"),
        SideMenuModel(title: "Network Call Logs")
    ]

    override func viewDidLoad() {
        super.viewDidLoad()
...
